<resources>
    <string name="app_name">StrikeTec</string>
    <string name="facebook_app_id">1039382006204995</string>
    <string name="fb_login_protocol_scheme">fb1039382006204995</string>
    <string name="nointernet">No Internet! Please check your internet connection.</string>
    <string name="or">OR</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="forgotpwd"><u>Forgot your password?</u></string>
    <string name="rememberme">Remember Me</string>
    <string name="nevershowtip">Don\'t show Tips</string>
    <string name="signinwithfb">Sign in with Facebook</string>
    <string name="signupwithfb">Sign up with Facebook</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_caps">FACEBOOK</string>
    <string name="signin">Sign In</string>
    <string name="signupfirst">DON\'T HAVE AN ACCOUNT?</string>
    <string name="signup">SIGN UP</string>
    <string name="signupguide">Sign up into StrikeTec and learn technique, workout routines, training tips and more with the easy to use mobile app.</string>
    <string name="account">Account</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="continues">Continue</string>
    <string name="error_fname_required">First Name is required.</string>
    <string name="error_lname_required">Last Name is required.</string>
    <string name="error_email_required">Email is required.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_current_password_required">Current password is required.</string>
    <string name="error_new_password_required">New password is required.</string>
    <string name="error_confirmpassword_required">Confirm password is required.</string>
    <string name="error_samepwd_required">Password and Confirm Password has to be same.</string>
    <string name="error_samenewpwd_required">New password and Confirm Password has to be same.</string>
    <string name="error_password_short">Password has to be more than 8 chractors</string>
    <string name="error_invalid_email">Email is invalid.</string>
    <string name="error_nonuppercase">Password needs at least one uppercase</string>
    <string name="error_nonspecial">Password needs at least one special character</string>
    <string name="error_nonlowercase">Password needs at least one lowercase</string>
    <string name="error_nonnumber">Password needs at least one number</string>
    <string name="forgotpwdtitle">Forgot Password</string>
    <string name="forgotpwdguide">Type your email address and soon you\'ll receive an email with instructions.</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="noacount">No Account Found</string>
    <string name="noaccountguide">No one with that email address was found.</string>
    <string name="tryagain">Try again</string>
    <string name="finalstep">It\'s All Good</string>
    <string name="finalstepguide">You just received an email with a code, put it here and we will allow you to reset your password</string>
    <string name="code">CODE</string>
    <string name="resetpassword">Reset Password</string>
    <string name="resetpwdguide">Input your new password to continue</string>
    <string name="currentpwd">Current Password</string>
    <string name="newpwd">New Password</string>
    <string name="confirmnewpwd">Confirm New Password</string>
    <string name="profilequestiontitle">Profile Questions</string>
    <string name="profilequestionguide">Let us know your preferences so we can recommend you a proper training to achieve your goals.</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="stance">Stance</string>
    <string name="error_gender_invalid">Please choose gender</string>
    <string name="error_birthday_invalid">Please chosse birthday</string>
    <string name="error_weight_invalid">Please choose weight</string>
    <string name="error_height_invalid">Please choose height</string>
    <string name="error_stance_invalid">Please choose stance</string>
    <string name="trainingplantitle">Training Plans</string>
    <string name="trainingplanguide">Let us know your preferences so we can recommend you a proper training to achieve your goals.</string>
    <string name="skill_one">Fat Loss</string>
    <string name="skill_two">Cardio &amp; Conditioning</string>
    <string name="skill_three">Box like a Professional</string>
    <string name="connectwearable">Connect Wearable</string>
    <string name="connectguide">Connect your sensors and start competing, training and improving!</string>
    <string name="startasspectator"><u>I\'LL START AS AN SPECTATOR</u></string>
    <string name="getwearable"><u>GET YOUR WEARABLE RIGHT NOW!</u></string>
    <string name="searchforneardevice">Search for near devices</string>
    <string name="spectator">Spectator</string>
    <string name="spectatorguide">As an spectator you\'ll be able to follow users, view their activity and profiles. But you won\'t be able to do trainings, challenges, games or tournaments, in order to do that you need to acquire the wearable.</string>
    <string name="searchdevices">Searching for Devices</string>
    <string name="foundresult">Found %1$s Devices</string>
    <string name="connectsensorguide">Connect devices for left and right arms before continuing.</string>
    <string name="setforleft">Set for Left Arm</string>
    <string name="setforright">Set for Right Arm</string>
    <string name="tip1_title">Wearable</string>
    <string name="tip1_guide">StrikeTec\'s hardware tracks the orientation of your Arms &amp; Legs in order to give you instant feedback to your mobile device.</string>
    <string name="skip">Skip</string>
    <string name="tip2_title">Track Your Progress</string>
    <string name="tip2_guide">Track your progress by every day, week and month</string>
    <string name="tip3_title">Challenges</string>
    <string name="tip3_guide">Participate in One-on-One battles, Compete with others in our hosted competitions and enjoy some custom games designed to increase your skills on the bag.</string>
    <string name="tip4_title">Earn Your Belt</string>
    <string name="tip4_guide">Earn badges for participating in battles, competitions and games. Earn a new belt as your performance increases during your workouts.</string>
    <string name="tabhome">Home</string>
    <string name="tabguidance">Guidance</string>
    <string name="tabtraining">Training</string>
    <string name="tabchallenges">Challenges</string>
    <string name="tabmore">More</string>
    <string name="sensorfoundmsg">Sensor :- %1$s detected.</string>
    <string name="scaningfinished">Scaning Finished</string>
    <string name="sensornotfound">Sensor not found.</string>
    <string name="conflict">Conflict</string>
    <string name="conflict_message">You already have a device set up for %1$s, do you want to replace this device</string>
    <string name="leftarm">Left Arm</string>
    <string name="rightarm">Right Arm</string>
    <string name="leftkick">Left Kick</string>
    <string name="rightkick">Right Kick</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="founddevices">Found %1$s Devices</string>
    <string name="starttraining">Start Training</string>
    <string name="stoptraining">Stop Training</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="quickstart">Quick\nStart</string>
    <string name="roundtraining">Round\nTraining</string>
    <string name="comboset">Combos\n&amp; Sets</string>
    <string name="scriptedround">Scripted\nRounds</string>
    <string name="quickstart_settings">Quick Start Settings</string>
    <string name="rounds">Rounds</string>
    <string name="norounds">No Rounds</string>
    <string name="selectnorounds">You have selected No Rounds</string>
    <string name="default_preset">Preset 1</string>
    <string name="min_sec">min:sec</string>
    <string name="label_time">TIME</string>
    <string name="label_rest">REST</string>
    <string name="label_prepare">Prepare</string>
    <string name="label_warning">Warning</string>
    <string name="label_totaltime">Total Time</string>
    <string name="label_gloves">Gloves</string>
    <string name="force_unit">lbs</string>
    <string name="glove_unit">oz</string>
    <string name="rounds_unselect">#183b47</string>
    <string name="rounds_select">#53d9ff</string>
    <string name="roundtime_unselect">#0d4844</string>
    <string name="roundtime_select">#00ffba</string>
    <string name="resttime_unselect">#382129</string>
    <string name="resttime_select">#e64c4c</string>
    <string name="prepare_select">#d9d5d5</string>
    <string name="prepare_unselect">#7e7c7c</string>
    <string name="set">Set</string>
    <string name="savenewpreset">Save New Preset</string>
    <string name="save">Save</string>
    <string name="empty_field_message">New %1$s name can not be empty!</string>
    <string name="empty_goal">Goal has to be larger than 1</string>
    <string name="preset">Preset</string>
    <string name="hint_presetname">PRESET NAME</string>
    <string name="quickstarttraining">Quick Start Training</string>
    <string name="label_speed">SPEED (MPH)</string>
    <string name="label_punchcount">PUNCH COUNT</string>
    <string name="label_power">POWER (LBS)</string>
    <string name="left">left  </string>
    <string name="right">right</string>
    <string name="averagedata">average data</string>
    <string name="speed_unit">mph</string>
    <string name="roundtrainingsettings">Round Training Settings</string>
    <string name="roundtraining_title">Round Training</string>
    <string name="combinations">Combinations</string>
    <string name="setroutine">Set Routines</string>
    <string name="combosettitle">Combos &amp; Sets</string>
    <string name="start">start</string>
    <string name="combinationtraining">Combination Training</string>
    <string name="setroutinetraining">Set Routine Training</string>
    <string name="workouttraining">Workout Training</string>
    <string name="workoutplan">Workout Plans</string>
    <string name="edit">Edit</string>
    <string name="time_settings">Time settings</string>
    <string name="round">round</string>
    <string name="rest">rest</string>
    <string name="speed">Speed</string>
    <string name="power">Power</string>
    <string name="bad">Bad</string>
    <string name="average">Average</string>
    <string name="excellent">Excellent</string>
    <string name="besttime">Best Time</string>
    <string name="maxspeed">Max speed</string>
    <string name="maxpower">Max power</string>
    <string name="secs">Secs</string>
    <string name="averageperformance">Average Performance</string>
    <string name="punchtype">punch type</string>
    <string name="rank">Rank</string>
    <string name="age">Age</string>
    <string name="change">Change</string>
    <string name="cancel_subscription">Cancel</string>
    <string name="current_subscription">Current Subscription</string>
    <string name="thanks_subscription_text">Thank you for subscribing!\nYou have 3 Tutorials remaining until December 18th, 2017. On that date, the Tutorials count will reset as long as your subscription remains active.\nView your remaining Tutorials at any time.</string>
</resources>