<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="@dimen/default_editheight"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.striketec.mobile.customview.CustomTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/force_color"
        android:text="@string/bad"
        android:textAllCaps="true"
        android:textSize="@dimen/textsize_10"
        android:textColor="@color/black"
        android:gravity="center"/>

    <com.striketec.mobile.customview.CustomTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:text="@string/average"
        android:textAllCaps="true"
        android:textSize="@dimen/textsize_10"
        android:textColor="@color/black"
        android:gravity="center"/>

    <com.striketec.mobile.customview.CustomTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/speed_color"
        android:text="@string/excellent"
        android:textAllCaps="true"
        android:textSize="@dimen/textsize_10"
        android:textColor="@color/black"
        android:gravity="center"/>

</LinearLayout>
