<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/logo_padding_small"
    android:padding="@dimen/default_margin"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="1dp"/>

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:src="@drawable/sensor_conflict"
            />
    </LinearLayout>

    <com.striketec.mobile.customview.CustomTextView
        android:layout_marginTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/conflict"
        android:textColor="@color/punches_text"
        android:textSize="@dimen/btn_textsize" />

    <com.striketec.mobile.customview.CustomTextView
        android:id="@+id/conflictmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center"
        android:text="@string/connectsensorguide"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textsize" />

    <LinearLayout
        android:layout_marginTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_smallbtnheight"
        android:orientation="horizontal">

        <com.striketec.mobile.customview.HexagonButton
            android:id="@+id/positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="1dp"
            android:text="@string/yes"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/default_textsize"
            app:hexagon_color="@color/orange"/>

        <com.striketec.mobile.customview.HexagonButton
            android:layout_marginLeft="@dimen/default_padding"
            android:id="@+id/negotive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="1dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textsize"
            app:fill="false"
            app:hexagon_color="@color/octagon_stroke"/>

    </LinearLayout>

</LinearLayout>
